--- a/SRC/public/css/style.css
+++ b/SRC/public/css/style.css
@@ -1,49 +1,78 @@
+body {
+  background-color: #f8f9fa;
+}
+
+header h1 {
+  margin: 0;
+}
+
+#cart {
+  font-size: 18px;
+}
+
 .cart-icon {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
+}
+
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  font-size: 18px;
+  margin: 10px 0;
+}
+
+.card-text {
+  color: #555;
+}
+
+.btn-primary {
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
+
+.card {
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+
+@keyframes bounce {
+  0% {
+      transform: translateY(0);
   }
-  
-  .card {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  50% {
+      transform: translateY(-10px);
   }
-  
-  .card-img-top {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  100% {
+      transform: translateY(0);
   }
-  
-  .card-body {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .card-title {
-    font-size: 18px;
-    margin: 10px 0;
-  }
-  
-  .card-text {
-    color: #555;
-  }
-  
-  .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
-  }
-  
-  .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
-  }
-  
-  .card {
-    transition: transform 0.2s;
-  }
-  
-  .card:hover {
-    transform: scale(1.05);
-  }
+}
+
+.rent-animation {
+  animation: bounce 0.5s;
+}
